seaqt/QtGui/gen_qpaintdevice.h

class QPaintDevice;
class QPaintEngine;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
int QPaintDevice_devType(const QPaintDevice* self);
bool QPaintDevice_paintingActive(const QPaintDevice* self);
QPaintEngine* QPaintDevice_paintEngine(const QPaintDevice* self);
int QPaintDevice_width(const QPaintDevice* self);
int QPaintDevice_height(const QPaintDevice* self);
int QPaintDevice_widthMM(const QPaintDevice* self);
int QPaintDevice_heightMM(const QPaintDevice* self);
int QPaintDevice_logicalDpiX(const QPaintDevice* self);
int QPaintDevice_logicalDpiY(const QPaintDevice* self);
int QPaintDevice_physicalDpiX(const QPaintDevice* self);
int QPaintDevice_physicalDpiY(const QPaintDevice* self);
double QPaintDevice_devicePixelRatio(const QPaintDevice* self);
double QPaintDevice_devicePixelRatioF(const QPaintDevice* self);
int QPaintDevice_colorCount(const QPaintDevice* self);
int QPaintDevice_depth(const QPaintDevice* self);
double QPaintDevice_devicePixelRatioFScale();